err/nwsserver.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/nwss'...
Compiling './lib/python3.5/site-packages/nwss/dummyComm.py'...
***   File "./lib/python3.5/site-packages/nwss/dummyComm.py", line 46
    def dummyWslv(self, (status, varId, valIndex, value)):
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nwss/protocol.py'...
***   File "./lib/python3.5/site-packages/nwss/protocol.py", line 98
    def writeStatusLenValue(self, (status, varId, valIndex, value)):
                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nwss/server.py'...
***   File "./lib/python3.5/site-packages/nwss/server.py", line 147
    else: raise AssertionError, 'variable has illegal mode: ' + self.mode
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nwss/util.py'...
***   File "./lib/python3.5/site-packages/nwss/util.py", line 90
    print "quoted command string:", msc_argv2str(argv)
                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/nwss/web.py'...
***   File "./lib/python3.5/site-packages/nwss/web.py", line 442
    def writeStatusLenValue(self, (status, varId, valIndex, value)):
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/nwsserver-1.5.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './nws-server'...
Listing './share'...
Listing './share/python-wheels'...
